syntax = "proto3";

package ua.anastasiia.finesapp.input.reqreply.fine;

import "ua/anastasiia/finesapp/commonmodels/fine/fine.proto";
import "ua/anastasiia/finesapp/input/reqreply/error.proto";

option java_package = "ua.anastasiia.finesapp.input.reqreply.fine";
option java_multiple_files = true;

message CreateFineRequest {
  commonmodels.fine.Fine fine = 1;
}

message CreateFineResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.fine.Fine fine = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      Error car_plate_duplicate_error = 1;
    }
  }
}
